2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calStorageCalendar.js (writeEvent): be
	tolerant for events which don't have a start or an end date.
	Replace them with an empty string.

	* src/calendar/base/src/calDavCalendar.js: webdav sync: do not try
	to delete items which are not present in the item id cache. Added
	new "finalizeUpdatedItems" with code executed when a safeRefresh
	is concluded. Call that new method from the
	getUpdatedItem_WebdavSync method too.

	* src/calendar/base/src/calCalendarManager.js: we do not post
	"onCalendarRegistered" notifications on new calendars before their
	cache is initialized.

2009-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-invitations-manager.js:
	only refreshs the enabled calendars (first inclusion).

	* src/calendar/base/content/calendar-multiday-view.xml
	(deleteItemsFromCalendar): duplicate the mEventInfos array so as
	to be able to wander through the array "normally" without having
	to keep the index count up-to-date.

	* src/calendar/base/content/calendar-month-view.xml
	(deleteItemsFromCalendar): use the "deleteHash" only to flag the
	current item as deleted.

	* src/calendar/base/content/calendar-minimonth-busy.js
	(parseBoxBusy, updateBoxBusy): use "\u001a" as separator instead
	of ";".: 

	* src/calendar/base/content/agenda-listbox.js
	(agendaListbox.deleteItemsFromCalendar) duplicate the childNodes
	array so that we can delete the childNode directly without having
	to maintain an index count.

2009-06-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-unifinder.js,
	src/calendar/base/content/agenda-listbox.js,
	src/calendar/base/content/calendar-minimonth-busy.js,
	src/calendar/base/content/calendar-month-view.xml,
	src/calendar/base/content/calendar-multiday-view.xml: modified
	onCalendarAdded and /-Removed to add or delete items from the
	relevant calendar only. (fixes #500718)
